Update existing languages

--- a/components/com_kunena/admin/language/az-AZ/az-AZ.com_kunena.controllers.ini
+++ b/components/com_kunena/admin/language/az-AZ/az-AZ.com_kunena.controllers.ini
@@ -68,8 +68,8 @@ COM_KUNENA_A_TEMPLATE_MANAGER_FILE_SAVED="Fayl yadda saxlanıldı"
 COM_KUNENA_A_TEMPLATE_MANAGER_INSTALL_EXTRACT_FAILED="Mövzu çixarılma xətası"
 COM_KUNENA_A_TEMPLATE_MANAGER_INSTALL_EXTRACT_MISSING="Çıxarmaq üçün olan fayl tapılmadı"
 COM_KUNENA_A_TEMPLATE_MANAGER_INSTALL_EXTRACT_SUCCESS="Şablon müvəffəqiyyətlə yaradıldlı"
-; COM_KUNENA_A_TEMPLATE_MANAGER_INSTALL_FAILED="Kunena template %s couldn't be installed."
-; COM_KUNENA_A_TEMPLATE_MANAGER_INSTALL_SUCCESS="Kunena template %s installed successfully."
+COM_KUNENA_A_TEMPLATE_MANAGER_INSTALL_FAILED="Kunena şablon% s yüklənə bilməz"
+COM_KUNENA_A_TEMPLATE_MANAGER_INSTALL_SUCCESS="Kunena şablon% s uğurla quraşdırılmışdır."
 COM_KUNENA_A_TEMPLATE_MANAGER_OPERATION_FAILED="Əməliyat səhvdir"
 COM_KUNENA_A_TEMPLATE_MANAGER_TEMPLATE="Mövzu"
 COM_KUNENA_A_TEMPLATE_MANAGER_TEMPLATE_MISSING_FILE="template.xml şablon arxivində tapılmadı, şablon qurula bilmədi"
@@ -97,11 +97,11 @@ COM_KUNENA_PRUNEDELETED="Silinmişdir"
 COM_KUNENA_PRUNETHREADS="Başlıqlar"
 COM_KUNENA_PRUNETRASHED="Zibil qabı"
 COM_KUNENA_RECOUNTFORUMS_DONE="Bütün bölmə hesabatlarını yenidən hesabla"
-; COM_KUNENA_SYNC_USERS_ADD_DONE="%s user profiles have been added"
-; COM_KUNENA_SYNC_USERS_DELETE_DONE="%s user profiles have been removed"
-; COM_KUNENA_SYNC_USERS_RENAME_DONE="%s messages have been updated"
-; COM_KUNENA_TOOLS_CLEANUP_IP_DONE="%s stored IP addresses have been removed."
-; COM_KUNENA_TOOLS_CLEANUP_IP_FAILED="No stored IP addresses were found."
+COM_KUNENA_SYNC_USERS_ADD_DONE="% s istifadəçi profilləri əlavə edilmişdir"
+COM_KUNENA_SYNC_USERS_DELETE_DONE="% s istifadəçi profilləri silindi"
+COM_KUNENA_SYNC_USERS_RENAME_DONE="%s mesajlar yeniləndi"
+COM_KUNENA_TOOLS_CLEANUP_IP_DONE="% s saxlanılan IP ünvan qaldırıldı."
+COM_KUNENA_TOOLS_CLEANUP_IP_FAILED="Xeyr, saxlanılan IP ünvanlar tapılmadı"
 
 ; JROOT/administrator/components/com_kunena/controllers/topicicons.php
 
@@ -128,7 +128,7 @@ COM_KUNENA_TOPICICON_SAVED="Mövzu ikonu seçildi"
 COM_KUNENA_A_NO_MESSAGES_SELECTED="Heçbir mesaj seçilmədi"
 COM_KUNENA_TRASH_DELETE_MESSAGES_DONE="Seçilən ismarıclar müvəffəqiyyətlə  silindi"
 COM_KUNENA_TRASH_DELETE_TOPICS_DONE="Seçilən mövzular müvəffəqiyyətlə  silindi"
-; COM_KUNENA_TRASH_ITEMS_RESTORE_DONE="The %s items in trash has been restored"
+COM_KUNENA_TRASH_ITEMS_RESTORE_DONE="Zibil qutuundakı %  məqalə bərpa olunub"
 
 ; JROOT/administrator/components/com_kunena/controllers/users.php
 
@@ -137,15 +137,15 @@ COM_KUNENA_A_USERMES_TRASHED_DONE="İstifadəçi  ismarıcları müvəffəqiyyə
 COM_KUNENA_A_USER_LOGOUT_DONE="İstifadəçi çıxışa vadar oldu"
 COM_KUNENA_PROFILE_NO_USER="İstifadəçi yoxdur"
 COM_KUNENA_USER_PROFILE_SAVED_SUCCESSFULLY="İstifadəçi müvəffəqiyyətlə yadda saxlanıldı"
-; COM_KUNENA_USER_PROFILE_SAVED_FAILED="User hasn't been saved correctly."
+COM_KUNENA_USER_PROFILE_SAVED_FAILED="İstifadəçi yaddasşda düzgün saxlanılmadı"
 COM_KUNENA_USER_UNBAN_DONE="İstifadəçinin qadağası müvəffəqiyyətlə ləğv edildi"
 COM_KUNENA_USER_UNBLOCK_DONE="İstifadəçi aktiv edildi"
-; COM_KUNENA_USER_ERROR_CANNOT_DELETE_YOURSELF="You cannot delete yourself."
-; COM_KUNENA_USER_ERROR_CANNOT_DELETE_ADMINS="You cannot delete a user in Kunena administrator group."
-; COM_KUNENA_USER_DELETE_DONE_SUCCESSFULLY="The user(s) named %s have been successfully deleted."
-; COM_KUNENA_USERS_BATCH_NO_USERS_SELECTED="No users selected."
-; COM_KUNENA_USERS_BATCH_NO_CATEGORIES_SELECTED="No categories selected."
-; COM_KUNENA_USERS_SET_MODERATORS_DONE="The users have been added as moderators."
-; COM_KUNENA_USER_BANNED_DONE="The user has been banned successfully"
-; COM_KUNENA_USER_DELETE_KUNENA_USER_TABLE_FAILED="The user %s can't be deleted from Kunena user table"
-; COM_KUNENA_USER_DELETE_JOOMLA_USER_TABLE_FAILED="The user %s can't be deleted from Joomla user table"
+COM_KUNENA_USER_ERROR_CANNOT_DELETE_YOURSELF="Siz özünüzü silə bilməzsiniz."
+COM_KUNENA_USER_ERROR_CANNOT_DELETE_ADMINS="Kunena yönətici grupunda bir istifadəçini silə bilmərsiniz"
+COM_KUNENA_USER_DELETE_DONE_SUCCESSFULLY="% S adlı istifadəçi (lər) uğurla silindi.\n"
+COM_KUNENA_USERS_BATCH_NO_USERS_SELECTED="İstifadəçi seçilmədi"
+COM_KUNENA_USERS_BATCH_NO_CATEGORIES_SELECTED="Kateqoriyalar seçilmədi."
+COM_KUNENA_USERS_SET_MODERATORS_DONE="İstifadəçilər moderator olaraq əlavə edilmişdir."
+COM_KUNENA_USER_BANNED_DONE="Istifadəçi uğurla qadağan edildi"
+COM_KUNENA_USER_DELETE_KUNENA_USER_TABLE_FAILED="Istifadəçi% s Kunena istifadəçi siyahısından silinə bilməz"
+COM_KUNENA_USER_DELETE_JOOMLA_USER_TABLE_FAILED="Istifadəçi% s Joomla istifadəçi siyhısından silinə bilməz"
