--- a/components/com_kunena/admin/language/de-DE/de-DE.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/de-DE/de-DE.com_kunena.views.ini
@@ -352,7 +352,7 @@ COM_KUNENA_A_USER_EDIT_DESC="Wähle &bdquo;Ja&ldquo;, damit registrierte Benutze
 COM_KUNENA_A_USER_EDIT_TIME="Zeit zum Bearbeiten"
 COM_KUNENA_A_USER_EDIT_TIMEGRACE="Kulanzzeit zum Speichern"
 COM_KUNENA_A_USER_EDIT_TIMEGRACE_DESC="Standard 600 [Sekunden], erlaubt es den Benutzern eine Modifikation zu speichern, nachdem die Bearbeitungszeit bereits abgelaufen ist."
-COM_KUNENA_A_USER_EDIT_TIME_DESC="Auf 0 setzen, damit es unbeschränkt ist. Ansonsten die Zeit angeben, nach der es Benutzern nicht mehr gestattet ist, ihre Beiträge zu bearbeiten."
+COM_KUNENA_A_USER_EDIT_TIME_DESC="Der Wert 0 steht für unbegrenzt. Ansonsten die Zeit in Sekunden eintragen, nach der es Benutzern nicht mehr gestattet ist, ihre Beiträge zu bearbeiten."
 COM_KUNENA_A_USER_KEYWORDS="Benutzer-Schlüsselwörter aktivieren"
 COM_KUNENA_A_USER_KEYWORDS_DESC="Wähle &bdquo;Ja&ldquo; um Benutzer-Schlüsselwörter zu aktivieren. Diese Einstellung erlaubt Benutzern, ihre eigenen Schlüsselwörter hinzufügen, die für andere Benutzer nicht sichtbar sind."
 COM_KUNENA_A_USER_MARKUP="Editiermarkierung anzeigen"
@@ -405,8 +405,8 @@ COM_KUNENA_COM_A_WAY_COUNT_USERS_USERLIST="Benutzeranzeige"
 COM_KUNENA_COM_A_WAY_COUNT_USERS_USERLIST_DESC="Auswahl, welche Benutzer auf der Seite angezeigt werden sollen (entweder alle Benutzer, alle Benutzer die angemeldet sind, oder nur aktive Benutzer)."
 COM_KUNENA_DEBUG_MODE="Debugmodus aktivieren"
 COM_KUNENA_DEBUG_MODE_DESC="Der Debug Modus liefert genauere Angaben bei Fehlermeldungen."
-COM_KUNENA_LISTCAT_SHOW_MODERATORS="Moderatoren im Kategorieindex anzeigen"
-COM_KUNENA_LISTCAT_SHOW_MODERATORS_DESC="Wähle &bdquo;Ja&ldquo;, wenn Moderatoren in den Kategorien angezeigt werden sollen. &bdquo;Nein&ldquo; erlaubt ein engeres Layout."
+COM_KUNENA_LISTCAT_SHOW_MODERATORS="Moderatoren auf der Indexseite anzeigen"
+COM_KUNENA_LISTCAT_SHOW_MODERATORS_DESC="Wähle &bdquo;Ja&ldquo;, wenn Kategorie-Moderatoren auch auf der Indexseite angezeigt werden sollen. &bdquo;Nein&ldquo; erlaubt ein engeres Layout."
 COM_KUNENA_MAILFULL="Kompletten Beitragsinhalt in die E-Mails für Abonnenten einbinden"
 COM_KUNENA_MAILFULL_DESC="Wenn &bdquo;Nein&ldquo; gewählt ist, dann bekommen Abonnenten nur den Titel von neuen Nachrichten zugeschickt."
 COM_KUNENA_NUMPOP="Anzahl der beliebtesten Themen"
