--- a/components/com_kunena/admin/language/pl-PL/pl-PL.com_kunena.controllers.ini
+++ b/components/com_kunena/admin/language/pl-PL/pl-PL.com_kunena.controllers.ini
@@ -134,7 +134,7 @@ COM_KUNENA_TRASH_ITEMS_RESTORE_DONE="Pozycja %s została przywrócona z kosza."
 
 COM_KUNENA_A_USERMES_MOVED_DONE="Wiadomości użytkownika zostały przeniesione z powodzeniem"
 COM_KUNENA_A_USERMES_TRASHED_DONE="Wiadomości użytkownika zostały usunięte pomyślnie"
-COM_KUNENA_A_USER_LOGOUT_DONE="Użytkownik został wylogowany."
+COM_KUNENA_A_USER_LOGOUT_DONE="Użytkownik został zmuszony do wylogowania."
 COM_KUNENA_PROFILE_NO_USER="Użytkownik nie istnieje."
 COM_KUNENA_USER_PROFILE_SAVED_SUCCESSFULLY="Użytkownik został zapisany z powodzeniem."
 COM_KUNENA_USER_PROFILE_SAVED_FAILED="Użytkownik nie został prawidłowo zapisany."
