--- a/components/com_kunena/admin/language/pl-PL/pl-PL.com_kunena.sys.ini
+++ b/components/com_kunena/admin/language/pl-PL/pl-PL.com_kunena.sys.ini
@@ -123,9 +123,9 @@ COM_KUNENA_MENU_HOME_DESC="Definicja widoku twojego forum"
 COM_KUNENA_ATTRIBS_MAIN_SETTINGS_LABEL="Ustawienia"
 COM_KUNENA_A_ALL_CATEGORIES="Wszystkie kategorie"
 COM_KUNENA_MENU_ALLOWEDCAT="Dozwolone kategorie"
-; COM_KUNENA_MENU_ALLOWEDCAT_DESC="Select categories that are allowed under this menu item. For other categories you need to create another menu. This feature can be used to create multiple forums into your site."
+COM_KUNENA_MENU_ALLOWEDCAT_DESC="Wybierz kategorie dozwolone pod tą pozycją menu. Dla innych kategorii musisz stworzyć osobne menu. Ta opcja pozwala stworzyć wiele forum na twojej stronie."
 COM_KUNENA_MENU_DEFAULTITEM="Domyślna pozycja menu"
-; COM_KUNENA_MENU_DEFAULTITEM_DESC="Select menu item, which is shown by default when you enter to forum. This option allows you to change default view and layout or to create redirection into another menu."
+COM_KUNENA_MENU_DEFAULTITEM_DESC="Wybierz pozycję menu która pokazywana będzie domyślnie po wejściu na forum. ta opcja pozwala na zmianę domyślnego widoku i układu lub na stworzenie przekierowania do innego menu."
 COM_KUNENA_MENU_HOME_DEFAULT="Strona główna"
 COM_KUNENA_MENU_HOME_DEFAULT_DESC="Zbuduj menu swojego forum pod tą stroną."
 COM_KUNENA_MENU_HOME_DEFAULT_DESC_LONG="Zbuduj menu swojego forum pod tą stroną."
@@ -252,23 +252,23 @@ COM_KUNENA_COM_A_LATESTCATEGORY_IN_HIDE="Ukryj kategorie"
 COM_KUNENA_COM_A_LATESTCATEGORY_IN_SHOW="Pokaż kategorie"
 COM_KUNENA_MENU_SELECTEDVIEW="Wybierz widok"
 COM_KUNENA_MENU_TOPICS_DEFAULT="Ostatnie tematy"
-; COM_KUNENA_MENU_TOPICS_DEFAULT_DESC="Displays recent topics with a few options to choose from."
-; COM_KUNENA_MENU_TOPICS_DEFAULT_DESC_LONG="Displays recent topics with a few options to choose from."
+COM_KUNENA_MENU_TOPICS_DEFAULT_DESC="Wyświetla ostatnie posty z paroma opcjami do wyboru."
+COM_KUNENA_MENU_TOPICS_DEFAULT_DESC_LONG="Wyświetla ostatnie posty z paroma opcjami do wyboru."
 COM_KUNENA_MENU_TOPICS_DEFAULT_LONG="Forum: Ostatnie tematy"
 COM_KUNENA_TOPICS_MODE_OPTION_DELETED="Tematy usunięte"
 COM_KUNENA_TOPICS_MODE_OPTION_LOCKED="Tematy zablokowane"
 COM_KUNENA_TOPICS_MODE_OPTION_NOREPLIES="Tematy bez odpowiedzi"
 COM_KUNENA_TOPICS_MODE_OPTION_REPLIES="Ostatnie tematy"
 COM_KUNENA_TOPICS_MODE_OPTION_STICKY="Tematy przyklejone"
-; COM_KUNENA_TOPICS_MODE_OPTION_TOPICS="Newest Topics"
+COM_KUNENA_TOPICS_MODE_OPTION_TOPICS="Najnowsze Tematy"
 COM_KUNENA_TOPICS_MODE_OPTION_UNAPROVED="Tematy niezaakceptowane"
 
 ; JROOT/components/com_kunena/views/topics/tmpl/posts.xml
 
 COM_KUNENA_MENU_HEADER="Nagłówek strony"
 COM_KUNENA_MENU_TOPICS_POSTS="Ostatnie posty"
-; COM_KUNENA_MENU_TOPICS_POSTS_DESC="Displays recent posts with a few options to choose from."
-; COM_KUNENA_MENU_TOPICS_POSTS_DESC_LONG="Displays recent posts with a few options to choose from."
+COM_KUNENA_MENU_TOPICS_POSTS_DESC="Wyświetla ostatnie posty z paroma opcjami do wyboru."
+COM_KUNENA_MENU_TOPICS_POSTS_DESC_LONG="Wyświetla ostatnie posty z paroma opcjami do wyboru."
 COM_KUNENA_MENU_TOPICS_POSTS_LONG="Forum Kunena: Ostatnie posty"
 COM_KUNENA_MENU_USER="Użytkownik"
 COM_KUNENA_POSTS_MODE_OPTION_DELETED="Usunięte posty"
@@ -288,7 +288,7 @@ COM_KUNENA_TOPICS_MODE_OPTION_MYLATEST="Moje ostatnie tematy"
 COM_KUNENA_TOPICS_MODE_OPTION_MYSUBSCRIPTIONS="Moje subskrypcje"
 COM_KUNENA_TOPICS_MODE_OPTION_POSTED="Zamieszczonych przeze mnie"
 COM_KUNENA_TOPICS_MODE_OPTION_STARTED="Rozpoczętych przeze mnie"
-; COM_KUNENA_TOPICS_MODE_OPTION_PLUGIN="By Plugin"
+COM_KUNENA_TOPICS_MODE_OPTION_PLUGIN="Przez Plugin"
 ; COM_KUNENA_TOPICS_MODETYPE_DESC="Header Text (By Plugin only)"
 
 ; JROOT/components/com_kunena/views/user/metadata.xml
