--- a/components/com_kunena/admin/language/pl-PL/pl-PL.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/pl-PL/pl-PL.com_kunena.views.ini
@@ -456,8 +456,8 @@ COM_KUNENA_VERSION_CHECK="Włącz sprawdzanie wersji"
 COM_KUNENA_VERSION_CHECK_DESC="Ustaw Tak, jeśli chcesz sprawdzać czy są nowe wersje Kunena są dostępne."
 COM_KUNENA_A_IP_TRACKING="Śledzenie Adresu IP"
 ; COM_KUNENA_A_IP_TRACKING_DESC="If set to <em>Yes</em>, forum will record IP address for every posted message (excluding anonymous posting feature). While the feature can be very useful when fighting against spam and malicious users, storing IP address without making users to accept it in the terms may be illegal in some countries."
-; COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED="Allow Guests to see Stats link"
-; COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED_DESC="Set to Yes to allow Guests to see Stats link."
+COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED="Pozwól gościom widzieć link do Statystyk"
+COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED_DESC="Ustaw Tak aby wyświetlać gościom link do Statystyk."
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/modal.php
 
@@ -498,7 +498,7 @@ COM_KUNENA_CPANEL_LABEL_GETTINGSTARTED="Podstawy"
 COM_KUNENA_CPANEL_DESC_HOWTOSETUP="Faq: Konfiguracja"
 COM_KUNENA_CPANEL_DESC_KNOWNINGERRORS="Faq: Znane błędy"
 COM_KUNENA_CPANEL_DESC_FREEORPAIDSUPPORT="Faq: Darmowe lub płatne wsparcie"
-; COM_KUNENA_CPANEL_LABEL_CLEANUP_IP="Cleanup IP Addresses"
+COM_KUNENA_CPANEL_LABEL_CLEANUP_IP="Wyczyść Adresy IP"
 
 ; JROOT/administrator/components/com_kunena/views/ranks/
 
