--- a/components/com_kunena/admin/language/pt-PT/pt-PT.com_kunena.libraries.ini
+++ b/components/com_kunena/admin/language/pt-PT/pt-PT.com_kunena.libraries.ini
@@ -119,9 +119,9 @@ COM_KUNENA_DATE_WEEK="semana"
 COM_KUNENA_DATE_WEEKS="semanas"
 COM_KUNENA_DATE_YEAR="ano"
 COM_KUNENA_DATE_YEARS="anos"
-COM_KUNENA_LIB_DATETIME_FMT="d M A H:i"
+COM_KUNENA_LIB_DATETIME_FMT="d M Y H:i"
 COM_KUNENA_LIB_DATETIME_UNKNOWN="Desconhecido"
-COM_KUNENA_LIB_DATE_FMT="d M A"
+COM_KUNENA_LIB_DATE_FMT="d M Y"
 COM_KUNENA_LIB_TIME_FMT="H:i"
 COM_KUNENA_LIB_DATE_TODAY="Hoje %s"
 COM_KUNENA_LIB_DATE_YESTERDAY="Ontem %s"
