--- a/components/com_kunena/admin/language/th-TH/th-TH.plg_quickicon_kunena.sys.ini
+++ b/components/com_kunena/admin/language/th-TH/th-TH.plg_quickicon_kunena.sys.ini
@@ -1,6 +1,6 @@
 ; Kunena Forum translation
 ;
-; All translations can be found from https://www.transifex.net/projects/p/Kunena/r/Kunena2/
+; All translations can be found from https://www.transifex.com/projects/p/Kunena/
 ; Please join the translation team if you want to contribute your changes to the next release.
 ;
 ; License GNU General Public License version 3 or later; see LICENSE.txt
@@ -12,6 +12,10 @@
 PLG_QUICKICON_KUNENA="Quick Icon - Kunena Forum"
 PLG_QUICKICON_KUNENA_DESC="ลิงก์ไปที่กระดานสนทนาของ Kunena และแสดงข้อมูลอัพเดทเมื่อคุณเข้าไปที่หน้าแผงควบคุม"
 
-PLG_QUICKICON_KUNENA_UPDATE_AVAILABLE="อัพเดทเดี๋ยวนี้!"
-PLG_QUICKICON_KUNENA_UPDATE_CRASH="ข้อมูลอัพเดทแบบสดๆล้มเหลว"
+PLG_QUICKICON_KUNENA_UPDATE_ADDONS="อัพเดต %d ส่วนเสริม"
+PLG_QUICKICON_KUNENA_UPDATE_NOW="อัพเดทเดี๋ยวนี้!"
+PLG_QUICKICON_KUNENA_UPDATE_DISABLED="ปิดการใช้งาน การปรับปรุง"
 PLG_QUICKICON_KUNENA_COMPLETE_INSTALLATION="กรุณาดำเนินการติดตั้ง Kunena ให้เสร็จสมบูรณ์"
+
+PLG_QUICKICON_KUNENA_GROUP_DESC="กลุ่มของปลั๊กอินนี้ (ค่านี้เมื่อเทียบกับค่ากลุ่มที่ใช้ในโมดูล 'Quick Icons')"
+PLG_QUICKICON_KUNENA_GROUP_LABEL="กลุ่ม"
