--- a/components/com_kunena/admin/language/tr-TR/tr-TR.com_kunena.install.ini
+++ b/components/com_kunena/admin/language/tr-TR/tr-TR.com_kunena.install.ini
@@ -120,7 +120,7 @@ COM_KUNENA_MIGRATE_ATTACHMENTS="Migrate attachments (%s left to go)"
 COM_KUNENA_MIGRATE_ATTACHMENTS_DONE="Migrate attachments (migrated %d, kayıp: %d, hatalı: %d)"
 COM_KUNENA_MIGRATE_AVATARS="Migrate avatars (%s left to go)"
 COM_KUNENA_MIGRATE_AVATARS_DONE="Migrate avatars (migrated %d, kayıp: %d, hatalı: %d)"
-COM_KUNENA_MIGRATE_AVATAR_GALLERY="Migrate avatar galleries"
+COM_KUNENA_MIGRATE_AVATAR_GALLERY="Avatar galerilerini taşıyın"
 COM_KUNENA_MIGRATE_CATEGORY_IMAGES="Migrate category images"
 COM_KUNENA_MIGRATE_RECOUNT_CATEGORY="Kategori istatistikleri tekrar hesaplaması"
 COM_KUNENA_MIGRATE_RECOUNT_DONE="Forum  istatistikleri tekrar hesaplaması"
@@ -147,7 +147,7 @@ COM_KUNENA_INSTALL_STEPS="Adımlar"
 
 ; JROOT/administrator/components/com_kunena/install/tmpl/default_start.php
 
-COM_KUNENA_INSTALL_DETECT_FAILED="Installer detected failed or interrupted installation attempt!"
+COM_KUNENA_INSTALL_DETECT_FAILED="Yükleyici başarısız oldu veya yükleme girişimi kesintiye uğradı!"
 COM_KUNENA_INSTALL_DETECT_FAILED_DESC="An incomplete installation of Kunena %s build %s was found in your system. This means that the installation either failed or was interrupted."
 COM_KUNENA_INSTALL_OFFLINE_WARNING="Kunena Forum çevrimdışı yapıldı."
 COM_KUNENA_INSTALL_OFFLINE_WARNING_BACKUP="Her hangi bir işlem yapmadan önce sitenizin yedeğini almanız tavsiye edilir."
