--- a/components/com_kunena/site/language/ar-AA/ar-AA.com_kunena.tpl_blue_eagle.ini
+++ b/components/com_kunena/site/language/ar-AA/ar-AA.com_kunena.tpl_blue_eagle.ini
@@ -114,7 +114,7 @@ COM_KUNENA_TEMPLATE_BLUE_EAGLE3_DESC="النسر الأزرق هو القالب 
 COM_KUNENA_TEMPLATE_DISPLAY_MENU="عرض قائمة كونينا"
 COM_KUNENA_TEMPLATE_DISPLAY_MENU_DESC="عرض قائمة كونينا بالموقع داخل قالب كونينا. تعطيل هذه الميزة إذا كنت ترغب في استخدام القائمة الرئيسية الخاصة بك بدلا من ذلك."
 COM_KUNENA_TEMPLATE_FORUM_HEADER_BACKGROUND="لون خلفية هيدر المنتدي"
-; COM_KUNENA_TEMPLATE_FORUM_HEADER_BACKGROUND_DESC="Define the color of the forum header background"
+COM_KUNENA_TEMPLATE_FORUM_HEADER_BACKGROUND_DESC="تحديد لون خلفية رأس المنتدى"
 COM_KUNENA_TEMPLATE_HOVER_TAB_COLOR="لون رف علامة التبويب"
 COM_KUNENA_TEMPLATE_HOVER_TAB_COLOR_DESC="أدخل لون رف علامة التبويب للقائمة ."
 COM_KUNENA_TEMPLATE_SKINNER="دمج القالب مع قالب جوملا"
