--- a/components/com_kunena/site/language/de-DE/de-DE.com_kunena.ini
+++ b/components/com_kunena/site/language/de-DE/de-DE.com_kunena.ini
@@ -15,7 +15,7 @@ COM_KUNENA_ACCESS="Zugang"
 COM_KUNENA_ADMIN="Kategorien"
 COM_KUNENA_ADMIN_POLLS="Umfragen"
 COM_KUNENA_ADVANCEDDESC="Einstellungen"
-COM_KUNENA_ADVANCEDDESCINFO="Kategorie Einstellungen"
+COM_KUNENA_ADVANCEDDESCINFO="Kategorieeinstellungen"
 COM_KUNENA_ADVANCEDDISPINFO="Kategoriedarstellung"
 COM_KUNENA_ANN_ID="ID"
 COM_KUNENA_ATTACH="Anhang"
