--- a/components/com_kunena/site/language/fa-IR/fa-IR.com_kunena.ini
+++ b/components/com_kunena/site/language/fa-IR/fa-IR.com_kunena.ini
@@ -123,7 +123,7 @@ COM_KUNENA_USRL_POSTS="ارسال"
 COM_KUNENA_VIEW_CATEGORY_LIST_CATEGORY_TITLE="نمایش دسته بندی "_QQ_"%s"_QQ_""
 COM_KUNENA_YES="بله"
 COM_KUNENA_AVATAR_UPLOAD_NOT_VALID_EXTENSIONS="پسوندهای مجاز برای آپلود نماد عبارتند از:%s"
-; COM_KUNENA_STATS_NOT_ALLOWED_TOSEE_STATS="You aren't allowed to see statistics"
+COM_KUNENA_STATS_NOT_ALLOWED_TOSEE_STATS="شما اجازه مشاهده آمار را ندارید"
 
 ; Automatically generated strings for COM_KUNENA_BUTTON_*
 
@@ -202,8 +202,8 @@ COM_KUNENA_BUTTON_UNSUBSCRIBE_CATEGORY_LONG="حذف اشتراك تالار"
 
 ; JROOT/administrator/components/com_kunena/install/plugins/plg_kunena_alphauserpoints/alphauserpoints/activity.php
 
-; COM_KUNENA_THANKYOU_GOT_FROM="Received Thank You From"
-; COM_KUNENA_THANKYOU_SAID_TO="Said Thank You To"
+COM_KUNENA_THANKYOU_GOT_FROM="دریافت تشکر از طرف"
+COM_KUNENA_THANKYOU_SAID_TO="اعلام تشکر به"
 
 ; JROOT/administrator/components/com_kunena/install/plugins/plg_kunena_community/community/activity.php
 
