--- a/components/com_kunena/site/language/nl-NL/nl-NL.com_kunena.ini
+++ b/components/com_kunena/site/language/nl-NL/nl-NL.com_kunena.ini
@@ -123,7 +123,7 @@ COM_KUNENA_USRL_POSTS="Berichten"
 COM_KUNENA_VIEW_CATEGORY_LIST_CATEGORY_TITLE="Bekijk categorie '%s'"
 COM_KUNENA_YES="Ja"
 COM_KUNENA_AVATAR_UPLOAD_NOT_VALID_EXTENSIONS="De extenties die een avatar kunnen uploaden zijn: %s"
-; COM_KUNENA_STATS_NOT_ALLOWED_TOSEE_STATS="You aren't allowed to see statistics"
+COM_KUNENA_STATS_NOT_ALLOWED_TOSEE_STATS="U heeft geen toegang tot de gebruikerslijst"
 
 ; Automatically generated strings for COM_KUNENA_BUTTON_*
 
