--- a/components/com_kunena/site/language/nl-NL/nl-NL.com_kunena.tpl_blue_eagle.ini
+++ b/components/com_kunena/site/language/nl-NL/nl-NL.com_kunena.tpl_blue_eagle.ini
@@ -114,7 +114,7 @@ COM_KUNENA_TEMPLATE_BLUE_EAGLE3_DESC="Blue Eagle is de standaard template voor K
 COM_KUNENA_TEMPLATE_DISPLAY_MENU="Toon Kunena Menu"
 COM_KUNENA_TEMPLATE_DISPLAY_MENU_DESC="Toon het actieve Kunena menu binnen het Kunena Template. Schakel deze optie uit als je in plaats hiervan je hoofdmenu wil gebruiken."
 COM_KUNENA_TEMPLATE_FORUM_HEADER_BACKGROUND="Achtergrond forumheader "
-; COM_KUNENA_TEMPLATE_FORUM_HEADER_BACKGROUND_DESC="Define the color of the forum header background"
+COM_KUNENA_TEMPLATE_FORUM_HEADER_BACKGROUND_DESC="Selecteer een kleur voor de forum header achtergrond"
 COM_KUNENA_TEMPLATE_HOVER_TAB_COLOR="Kleur hover tab"
 COM_KUNENA_TEMPLATE_HOVER_TAB_COLOR_DESC="Type de kleurcode bij hover op tab."
 COM_KUNENA_TEMPLATE_SKINNER="Gebruik Joomla template"
