--- a/components/com_kunena/site/language/pl-PL/pl-PL.com_kunena.templates.ini
+++ b/components/com_kunena/site/language/pl-PL/pl-PL.com_kunena.templates.ini
@@ -66,7 +66,7 @@ COM_KUNENA_BAN_UNBLOCK_USER="Aktywuj użytkownika"
 COM_KUNENA_BAN_USERID="Id użytkownika"
 COM_KUNENA_BAN_USERNAME="Nazwa użytkownïka"
 COM_KUNENA_BAN_USER_NOHISTORY="Użytkownik %s nigdy nie był blokowany."
-; COM_KUNENA_BBCODE_EDITOR_JAVASCRIPT_DISABLED="BBCode Editor Disabled: Please enable JavaScript in your browser"
+COM_KUNENA_BBCODE_EDITOR_JAVASCRIPT_DISABLED="Edytor BBCode Wyłączony: Proszę włączyć obsługę JavaScript w przeglądarce"
 COM_KUNENA_BBCODE_EDITOR_JAVASCRIPT_LOADING="Ładowanie edytora BBCode..."
 COM_KUNENA_BOARDCODE="Boardcode"
 COM_KUNENA_BULK_CHOOSE_DESTINATION="- Wybierz miejsce doecelowe -"
@@ -274,7 +274,7 @@ COM_KUNENA_TEMPLATE_BOTTOM="Dół"
 COM_KUNENA_TEMPLATE_BUTTON_BORDER_COLOR="Kolor ramki przycisku"
 COM_KUNENA_TEMPLATE_BUTTON_BORDER_COLOR_DESC="Podaj kolor ramki przycisku."
 COM_KUNENA_TEMPLATE_BUTTON_BORDER_HOVER_COLOR="Kolor ramki przycisku pod kursorem"
-; COM_KUNENA_TEMPLATE_BUTTON_BORDER_HOVER_COLOR_DESC="Enter the color of button borders when hovered over."
+COM_KUNENA_TEMPLATE_BUTTON_BORDER_HOVER_COLOR_DESC="Podaj kolor obramowań przycisku podczas najechania wskaźnikiem myszy."
 COM_KUNENA_TEMPLATE_BUTTON_COLOR="Kolor przycisku"
 COM_KUNENA_TEMPLATE_BUTTON_COLOR_DESC="Podaj kolor przycisków."
 COM_KUNENA_TEMPLATE_BUTTON_HOVER_COLOR="Kolor przycisku pod kursorem"
@@ -288,7 +288,7 @@ COM_KUNENA_TEMPLATE_BUTTON_SET_WHITEBIRD="Biały"
 COM_KUNENA_TEMPLATE_BUTTON_TEXT_COLOR="Kolor tekstu na przycisku."
 COM_KUNENA_TEMPLATE_BUTTON_TEXT_COLOR_DESC="Podaj kolor tekstu na przycisku."
 COM_KUNENA_TEMPLATE_BUTTON_TEXT_HOVER_COLOR="Kolor tekstu na przycisku pod kursorem"
-; COM_KUNENA_TEMPLATE_BUTTON_TEXT_HOVER_COLOR_DESC="Enter the color of button text when hovered over."
+COM_KUNENA_TEMPLATE_BUTTON_TEXT_HOVER_COLOR_DESC="Podaj kolor tekstu przycisku podczas najechania wskaźnikiem myszy."
 COM_KUNENA_TEMPLATE_DEFAULT="Domyślny"
 COM_KUNENA_TEMPLATE_EDITOR_ICON_SET="Zestaw ikon edytora"
 COM_KUNENA_TEMPLATE_EDITOR_ICON_SET_DESC="Wybierz zestaw ikon edytora, wyświetlanych na Twoim forum"
@@ -391,7 +391,7 @@ COM_KUNENA_CANCEL_DESC="Kliknij aby anulować"
 ; COM_KUNENA_ON_DATE="on %s"
 ; COM_KUNENA_TOPICS_MODERATION_PERFORM="Perform"
 COM_KUNENA_TOPIC_IS_LOCKED="Ten temat jest zablokowany"
-; COM_KUNENA_TOPIC_STARTED_ON_DATE_BY_USER="Topic started on %s by %s"
+COM_KUNENA_TOPIC_STARTED_ON_DATE_BY_USER="Temat rozpoczęty w %s przez %s"
 
 ; JROOT/components/com_kunena/template/mirage/html/announcement/list.php
 
@@ -408,12 +408,12 @@ COM_KUNENA_VIEW_CATEGORY_NO_TOPICS="Brak tematów w tej kategorii"
 
 ; JROOT/components/com_kunena/template/mirage/html/category/edit.php
 
-; COM_KUNENA_APPLY="Apply"
+COM_KUNENA_APPLY="Zastosuj"
 COM_KUNENA_APPLY_DESC="Kliknij aby zatwierdzić zamiany"
-; COM_KUNENA_A_ACCESSTYPE="Access Type:"
+COM_KUNENA_A_ACCESSTYPE="Typ dostępu:"
 COM_KUNENA_BASIC_INFO="Podstawowe informacje"
 COM_KUNENA_MODERATION="Moderowanie forum i moderatorzy"
-; COM_KUNENA_MODERATOR_ADD="Add Moderator(s)"
+COM_KUNENA_MODERATOR_ADD="Dodaj Moderatora(ów)"
 COM_KUNENA_MODERATOR_ADD_DESC="Kliknij aby dodać moderatorów"
 COM_KUNENA_SAVE_DESC="Kliknij aby zapisać zamiany"
 COM_KUNENA_SETTINGS="Forum - rozszerzona konfiguracja"
@@ -422,12 +422,12 @@ COM_KUNENA_THIS_MODERATOR_REMOVE="Usuń tego moderatora"
 
 ; JROOT/components/com_kunena/template/mirage/html/category/list_category.php
 
-; COM_KUNENA_VIEW_CATEGORY_LIST_SUBCATEGORY_TITLE="View Subcategory '%s'"
-; COM_KUNENA_VIEW_CATEGORY_LIST_TOPICS_N_REPLIES="(%d Topics / %d Replies)"
+COM_KUNENA_VIEW_CATEGORY_LIST_SUBCATEGORY_TITLE="Pokaż podkategorię '%s'"
+COM_KUNENA_VIEW_CATEGORY_LIST_TOPICS_N_REPLIES="(%d Tematów / %d Odpowiedzi)"
 
 ; JROOT/components/com_kunena/template/mirage/html/category/manage.php
 
-; COM_KUNENA_NEW_CATEGORY_LONG="Click here to create a new category"
+COM_KUNENA_NEW_CATEGORY_LONG="Kliknij tutaj, aby utworzyć nową kategorię"
 
 ; JROOT/components/com_kunena/template/mirage/html/common/
 
@@ -435,7 +435,7 @@ COM_KUNENA_VIEW_COMMON_LOGOUT_OWN_LINK_TITLE="Zobacz swój profil"
 
 ; JROOT/components/com_kunena/template/mirage/html/common/logout.php
 
-; COM_KUNENA_VIEW_COMMON_LOGOUT_LONG="Click log out button to log out of the forum."
+COM_KUNENA_VIEW_COMMON_LOGOUT_LONG="Kliknij przycisk wyloguj, aby wylogować się z forum."
 
 ; JROOT/components/com_kunena/template/mirage/html/common/menu.php
 
@@ -448,71 +448,71 @@ COM_KUNENA_VIEW_COMMON_STAT_LINK_TITLE="Pokaż statystyki forum"
 ; JROOT/components/com_kunena/template/mirage/html/common/whosonline.php
 
 COM_KUNENA_VIEW_COMMON_WHO_LINK="Lista użytkowników"
-; COM_KUNENA_VIEW_COMMON_WHO_LINK_TITLE="View the Member List"
+COM_KUNENA_VIEW_COMMON_WHO_LINK_TITLE="Przeglądaj listę użytkowników"
 
 ; JROOT/components/com_kunena/template/mirage/html/search/default.php
 
-; COM_KUNENA_SEARCH_ENTER_TOPICID="Enter topic ID"
+COM_KUNENA_SEARCH_ENTER_TOPICID="Wpisz ID tematu"
 
 ; JROOT/components/com_kunena/template/mirage/html/topic/
 
-; COM_KUNENA_TOPIC_NO_TAGS="No tags set"
+COM_KUNENA_TOPIC_NO_TAGS="Brak ustawionych tagów"
 COM_KUNENA_TOPIC_TAGS_ADD_EDIT="Dodaj/edytuj tagi"
 
 ; JROOT/components/com_kunena/template/mirage/html/topic/edit_editor.php
 
 COM_KUNENA_EDITING_ENTER_REASON="Podaj powód edycji"
-; COM_KUNENA_ENTER_MESSAGE="Enter your message here"
+COM_KUNENA_ENTER_MESSAGE="Wpisz tutaj swoją wiadomość"
 
 ; JROOT/components/com_kunena/template/mirage/html/topic/edit_form.php
 
-; COM_KUNENA_EDITOR_TOPIC_TAGS_ADD_COMMAS="Separate with comma"
+COM_KUNENA_EDITOR_TOPIC_TAGS_ADD_COMMAS="Oddziel przecinkami"
 COM_KUNENA_ENTER_SUBJECT="Wpisz temat"
 COM_KUNENA_MESSAGE_ENTER_EMAIL="Wpisz swój Email"
-; COM_KUNENA_MESSAGE_ENTER_NAME="Enter Your Name"
-; COM_KUNENA_POST_AS_ANONYMOUS_CHECK="Check if you want post as Anonymous"
-; COM_KUNENA_UPLOAD_MAX_FILE_SIZE="Max file size %s kb"
-; COM_KUNENA_UPLOAD_MAX_IMAGE_SIZE="Max image size %s kb"
+COM_KUNENA_MESSAGE_ENTER_NAME="Wpisz swoje imię"
+COM_KUNENA_POST_AS_ANONYMOUS_CHECK="Zaznacz jeśli chcesz wysłać post anonimowo"
+COM_KUNENA_UPLOAD_MAX_FILE_SIZE="Maksymalny rozmiary plików %s kb"
+COM_KUNENA_UPLOAD_MAX_IMAGE_SIZE="Maksymalny rozmiar obrazu %s kb"
 
 ; JROOT/components/com_kunena/template/mirage/html/topic/moderate.php
 
 COM_KUNENA_BUTTON_MODERATE_MESSAGE="Przenieś"
-; COM_KUNENA_MODERATION_TITLE_DEST_ENTER_SUBJECT="Enter New Subject"
+COM_KUNENA_MODERATION_TITLE_DEST_ENTER_SUBJECT="Wprowadź nowy temat"
 
 ; JROOT/components/com_kunena/template/mirage/html/topics/default_list.php
 
-; COM_KUNENA_VIEW_RECENT_NO_TOPICS="No Topics"
+COM_KUNENA_VIEW_RECENT_NO_TOPICS="Brak tematów"
 
 ; JROOT/components/com_kunena/template/mirage/html/topics/posts_actions.php
 
-; COM_KUNENA_FILTER_MESSAGES_BY="Filter posts by"
+COM_KUNENA_FILTER_MESSAGES_BY="Filtruj posty przez"
 COM_KUNENA_SHOW_LAST="Wyświetlaj najpierw ostatnie posty"
 COM_KUNENA_STAT_POPULAR="Lista "
-; COM_KUNENA_TOPIC_ACTIONS_MOST_ANSWERS="Most Responses"
-; COM_KUNENA_TOPIC_ACTIONS_NUMBER_THANK_YOUS="Number of Thank Yous"
+COM_KUNENA_TOPIC_ACTIONS_MOST_ANSWERS="Najwięcej odpowiedzi"
+COM_KUNENA_TOPIC_ACTIONS_NUMBER_THANK_YOUS="Liczba podziękowań"
 
 ; JROOT/components/com_kunena/template/mirage/html/user/default_ban.php
 
-; COM_KUNENA_BAN_STARTEXPIRETIME_DESC_LONG="Select End Time in format YYYY-MM-DD - HH:MM:SS"
-; COM_KUNENA_MODERATE_DELETE_ALL_POSTS_DESC="Check for delete all posts"
-; COM_KUNENA_MODERATE_DELETE_BAD_AVATAR_DESC="Check for delete offending avatar"
-; COM_KUNENA_MODERATE_DELETE_BAD_PROFILEINFO_DESC="Check for delete all the profile info"
-; COM_KUNENA_MODERATE_DELETE_BAD_SIGNATURE_DESC="Check for delete offending signature"
-; COM_KUNENA_MODERATE_REMOVE_BAN_DESC="Expire current ban"
+COM_KUNENA_BAN_STARTEXPIRETIME_DESC_LONG="Wybierz czas zakończenia w formacie YYYY-MM-DD - HH:MM:SS"
+COM_KUNENA_MODERATE_DELETE_ALL_POSTS_DESC="Zaznacz aby usunąć wszystkie posty"
+COM_KUNENA_MODERATE_DELETE_BAD_AVATAR_DESC="Zaznacz aby usunąć obraźliwy avatar"
+COM_KUNENA_MODERATE_DELETE_BAD_PROFILEINFO_DESC="Zaznacz aby usunąć wszystkie informacje o profilu"
+COM_KUNENA_MODERATE_DELETE_BAD_SIGNATURE_DESC="Zaznacz aby usunąć obraźliwy podpis"
+COM_KUNENA_MODERATE_REMOVE_BAN_DESC="Wygaśnięcie obecnego zakazu"
 
 ; JROOT/components/com_kunena/template/mirage/html/user/edit_profile.php
 
-; COM_KUNENA_MYPROFILE_LOCATION_DESC="Google map location: Helsinki, Finland"
-; COM_KUNENA_MYPROFILE_PERSONALTEXT_DESC="Few words from yourself"
+COM_KUNENA_MYPROFILE_LOCATION_DESC="Lokalizacja na Google map: Helsinki, Finlandia"
+COM_KUNENA_MYPROFILE_PERSONALTEXT_DESC="Kilka słów od siebie"
 
 ; JROOT/components/com_kunena/template/mirage/html/user/edit_tab.php
 
-; COM_KUNENA_EDITOR_HELPLINE_SAVE="Click here to save"
+COM_KUNENA_EDITOR_HELPLINE_SAVE="Kliknij tutaj, aby zapisać"
 
 ; JROOT/components/com_kunena/template/mirage/template.xml
 
-; COM_KUNENA_TEMPLATE_COLORS="Colors"
-; COM_KUNENA_TEMPLATE_CSS3_COLORS="Css3 Options"
+COM_KUNENA_TEMPLATE_COLORS="Kolory"
+COM_KUNENA_TEMPLATE_CSS3_COLORS="Opcje Css3 "
 ; COM_KUNENA_TEMPLATE_FORUM_BODY_COLOR="Body Color text"
 ; COM_KUNENA_TEMPLATE_FORUM_BODY_COLOR_DESC="Body Color text. like category details"
 ; COM_KUNENA_TEMPLATE_FORUM_HOVER_CATEGORIES_ROW="Hover Category Odd Row Color"
@@ -547,7 +547,7 @@ COM_KUNENA_TEMPLATE_LEGEND_MODERATOR_COLOR="Kolor moderatora"
 COM_KUNENA_TEMPLATE_LEGEND_USER_COLOR="Kolor użytkowników"
 ; COM_KUNENA_TEMPLATE_LEGEND_USER_DESC="Legend color for Users."
 COM_KUNENA_TEMPLATE_MIRAGE_TEMPLATE_DESC="To jest nowy szablon przeznaczony dla Kunena 2.0."
-; COM_KUNENA_TEMPLATE_TABS="Tabs"
+COM_KUNENA_TEMPLATE_TABS="Zakładki"
 
 ; Removed strings
 
