--- a/components/com_kunena/site/language/pl-PL/pl-PL.mod_kunenamenu.ini
+++ b/components/com_kunena/site/language/pl-PL/pl-PL.mod_kunenamenu.ini
@@ -14,13 +14,13 @@ MOD_KUNENAMENU_FIELD_ALLCHILDREN_DESC="Rozwiń menu i utrzymaj jego submenu zaws
 MOD_KUNENAMENU_FIELD_ALLCHILDREN_LABEL="Wyświetl pozycje sub-menu"
 MOD_KUNENAMENU_FIELD_CLASS_DESC="Sufiks, który zostanie dodany do klasy CSS dla pozycji menu"
 MOD_KUNENAMENU_FIELD_CLASS_LABEL="Sufiks klasy stylu dla menu"
-; MOD_KUNENAMENU_FIELD_ENDLEVEL_DESC="Level to stop rendering the menu at. If you choose 'All', all levels will be shown depending on 'Show Sub-menu Items' setting."
+MOD_KUNENAMENU_FIELD_ENDLEVEL_DESC="Poziom kończący wyświetlanie menu. Jeżeli wybierzesz 'Wszystkie', wszystkie poziomy będą wyświetlone w zależności od wybranej opcji 'Pokaż pozycje menu podrzędnego'"
 MOD_KUNENAMENU_FIELD_ENDLEVEL_LABEL="Poziom końcowy"
 MOD_KUNENAMENU_FIELD_MENUTYPE_DESC="Wybierz menu z listy"
 MOD_KUNENAMENU_FIELD_MENUTYPE_LABEL="Wybierz menu"
-; MOD_KUNENAMENU_FIELD_STARTLEVEL_DESC="Level to start rendering the menu at. Setting the start and end levels to the same # and setting 'Show Sub-menu Items' to yes will only display that single level."
+MOD_KUNENAMENU_FIELD_STARTLEVEL_DESC="Poziom początkowy wyświetlania menu. Ustawienie poziomu początkowego i końcowego na tą samą # wartość i ustawienie 'Pokaż pozycje menu podrzędnego' na Tak powoduje wyświetlenie tylko tego pojedynczego poziomu."
 MOD_KUNENAMENU_FIELD_STARTLEVEL_LABEL="Poziom startowy"
-; MOD_KUNENAMENU_FIELD_TAG_ID_DESC="An ID attribute to assign to the root UL tag of the menu (optional)"
+MOD_KUNENAMENU_FIELD_TAG_ID_DESC="Atrybut ID przypisany do głównego drzewa UL w menu (opcjonalnie)"
 MOD_KUNENAMENU_FIELD_TAG_ID_LABEL="ID tagu dla menu"
 MOD_KUNENAMENU_FIELD_TARGET_DESC="Parametry dla JavaScript'u w celu pozycjonowania wyskakującego okienka, np. top=50,left=50,width=200,height=300"
 MOD_KUNENAMENU_FIELD_TARGET_LABEL="Pozycja docelowa"
