--- a/components/com_kunena/site/language/ro-RO/ro-RO.com_kunena.models.ini
+++ b/components/com_kunena/site/language/ro-RO/ro-RO.com_kunena.models.ini
@@ -22,7 +22,7 @@ COM_KUNENA_UNSUBSCRIBE_SELECTED="Dezabonare selec&#539;ie"
 ; JROOT/components/com_kunena/models/announcement.php
 
 COM_KUNENA_BULK_ANNOUNCEMENT_PUBLISH="Public&#259;"
-; COM_KUNENA_BULK_ANNOUNCEMENT_UNPUBLISH="Unpublish"
+COM_KUNENA_BULK_ANNOUNCEMENT_UNPUBLISH="De-publică"
 COM_KUNENA__BULK_ANNOUNCEMENT_DELETE="&#536;terge"
 
 ; JROOT/components/com_kunena/models/search.php
@@ -30,7 +30,7 @@ COM_KUNENA__BULK_ANNOUNCEMENT_DELETE="&#536;terge"
 COM_KUNENA_GEN_SEARCH_BOX="Caut&#259; &#238;n forum"
 COM_KUNENA_SEARCH_ERR_NOPOSTS="Nici un mesaj con&#539;in&#226;nd to&#539;i termenii c&#259;ut&#259;rii nu a fost g&#259;sit"
 COM_KUNENA_SEARCH_ERR_SHORTKEYWORD="Cel pu&#539;in un cuv&#226;nt cheie trebuie s&#259; aibe peste trei caractere"
-; COM_KUNENA_SEARCH_NORESULTS_FOUND="Your search %s did not match any topics."
+COM_KUNENA_SEARCH_NORESULTS_FOUND="Căutarea %s nu are nici un rezultat in discutii "
 
 ; JROOT/components/com_kunena/models/topics.php
 
