--- a/components/com_kunena/site/language/th-TH/th-TH.mod_kunenamenu.ini
+++ b/components/com_kunena/site/language/th-TH/th-TH.mod_kunenamenu.ini
@@ -1,4 +1,27 @@
-; Sorry, this language file hasn't been translated yet.
+; Kunena Forum translation
 ;
-; If you want to help us, please start by reading our documentation on translating Kunena:
-; http://docs.kunena.org/index.php/Translating_Kunena
+; All translations can be found from https://www.transifex.com/projects/p/Kunena/
+; Please join the translation team if you want to contribute your changes to the next release.
+;
+; License GNU General Public License version 3 or later; see LICENSE.txt
+; Note : All ini files need to be saved as UTF-8 - No BOM
+
+; Using new INI string format for Joomla! 2.5
+
+
+MOD_KUNENAMENU="เมนูใช้งานKunena"
+MOD_KUNENAMENU_FIELD_ALLCHILDREN_DESC="ขยายพื้นที่ของเมนูออกและทำให้รายการที่อยู่ในเมนูย่อยสามารถมองเห็นได้เสมอ"
+MOD_KUNENAMENU_FIELD_ALLCHILDREN_LABEL="แสดงรายการที่อยู่ในเมนูย่อย"
+MOD_KUNENAMENU_FIELD_CLASS_DESC="A suffix to be applied to the CSS class of the menu items"
+MOD_KUNENAMENU_FIELD_CLASS_LABEL="เมนูคลาส Suffix"
+MOD_KUNENAMENU_FIELD_ENDLEVEL_DESC="ระดับที่จะหยุดการแสดงผลเมนูที่ หากคุณเลือก 'ทั้งหมด' ทุกระดับจะได้รับการแสดงขึ้นอยู่กับการตั้งค่า 'แสดงรายการเมนูย่อย'"
+MOD_KUNENAMENU_FIELD_ENDLEVEL_LABEL="ระดับสุดท้าย"
+MOD_KUNENAMENU_FIELD_MENUTYPE_DESC="เลือกเมนูจากในรายการ"
+MOD_KUNENAMENU_FIELD_MENUTYPE_LABEL="เลือกเมนู"
+MOD_KUNENAMENU_FIELD_STARTLEVEL_DESC="ระดับที่จะเริ่มต้นการแสดงผลเมนูที่ การตั้งค่าเริ่มต้นและสิ้นสุดที่ระดับ # เดียวกันและการตั้งค่า 'แสดงเมนูย่อย' รายการที่จะใช่เพียง แต่จะแสดงระดับเดียวที่"
+MOD_KUNENAMENU_FIELD_STARTLEVEL_LABEL="ระดับเริ่มต้น"
+MOD_KUNENAMENU_FIELD_TAG_ID_DESC="แอตทริบิวต์ ID จะกำหนดให้กับแท็ก UL รากของเมนู (ถ้ามี)"
+MOD_KUNENAMENU_FIELD_TAG_ID_LABEL="เมนู ID"
+MOD_KUNENAMENU_FIELD_TARGET_DESC="JavaScript values to position a popup window, e.g. top=50,left=50,width=200,height=300"
+MOD_KUNENAMENU_FIELD_TARGET_LABEL="ตำแหน่งปลายทาง"
+MOD_KUNENAMENU_XML_DESCRIPTION="โมดูลนี้จะแสดงเมนูทางส่วนด้านหน้าเว็บ"
