--- a/components/com_kunena/site/language/tr-TR/tr-TR.mod_kunenamenu.ini
+++ b/components/com_kunena/site/language/tr-TR/tr-TR.mod_kunenamenu.ini
@@ -1,4 +1,27 @@
-; Sorry, this language file hasn't been translated yet.
+; Kunena Forum translation
 ;
-; If you want to help us, please start by reading our documentation on translating Kunena:
-; http://docs.kunena.org/index.php/Translating_Kunena
+; All translations can be found from https://www.transifex.com/projects/p/Kunena/
+; Please join the translation team if you want to contribute your changes to the next release.
+;
+; License GNU General Public License version 3 or later; see LICENSE.txt
+; Note : All ini files need to be saved as UTF-8 - No BOM
+
+; Using new INI string format for Joomla! 2.5
+
+
+MOD_KUNENAMENU="Kunena Menü"
+MOD_KUNENAMENU_FIELD_ALLCHILDREN_DESC="Menüyü genişletin ve alt menü öğelerini her zaman görünür kılın."
+MOD_KUNENAMENU_FIELD_ALLCHILDREN_LABEL="Alt menü öğelerini göster"
+MOD_KUNENAMENU_FIELD_CLASS_DESC="Menü öğelerinin CSS sınıfına uygulanacak olan bir sonek"
+MOD_KUNENAMENU_FIELD_CLASS_LABEL="Menü Sınıf Soneki"
+; MOD_KUNENAMENU_FIELD_ENDLEVEL_DESC="Level to stop rendering the menu at. If you choose 'All', all levels will be shown depending on 'Show Sub-menu Items' setting."
+MOD_KUNENAMENU_FIELD_ENDLEVEL_LABEL="Bitiş seviyesi"
+MOD_KUNENAMENU_FIELD_MENUTYPE_DESC="Listeden bir menü seçin"
+MOD_KUNENAMENU_FIELD_MENUTYPE_LABEL="Menü Seç"
+; MOD_KUNENAMENU_FIELD_STARTLEVEL_DESC="Level to start rendering the menu at. Setting the start and end levels to the same # and setting 'Show Sub-menu Items' to yes will only display that single level."
+MOD_KUNENAMENU_FIELD_STARTLEVEL_LABEL="Başlangıç seviyesi"
+MOD_KUNENAMENU_FIELD_TAG_ID_DESC="Menünün kök UL etiketine atamak için bir ID özniteliği (isteğe bağlı)"
+MOD_KUNENAMENU_FIELD_TAG_ID_LABEL="Menü Etiket ID"
+; MOD_KUNENAMENU_FIELD_TARGET_DESC="JavaScript values to position a popup window, e.g. top=50,left=50,width=200,height=300"
+MOD_KUNENAMENU_FIELD_TARGET_LABEL="Hedef Konum"
+MOD_KUNENAMENU_XML_DESCRIPTION="Bu modül sitenizde menü gösterir."
