--- a/components/com_kunena/admin/language/az-AZ/az-AZ.com_kunena.ini
+++ b/components/com_kunena/admin/language/az-AZ/az-AZ.com_kunena.ini
@@ -21,7 +21,7 @@ COM_KUNENA_PUBLIC="Ümumi"
 COM_KUNENA_TOPLEVEL="Yuxarı səviyyə"
 COM_KUNENA_TRASH_MESSAGES="Mesajlar"
 COM_KUNENA_TRASH_TOPICS="Mövzular"
-; COM_KUNENA_TRASH_USERMESSAGES="Trash Messages"
+COM_KUNENA_TRASH_USERMESSAGES="Zibil qutusundakı mesajlar"
 COM_KUNENA_UNPUBLISHED="Paylaşılmamış"
 
 ; Removed strings
