--- a/components/com_kunena/admin/language/de-DE/de-DE.com_kunena.install.ini
+++ b/components/com_kunena/admin/language/de-DE/de-DE.com_kunena.install.ini
@@ -23,7 +23,7 @@ COM_KUNENA_CONTROLLER_INSTALL_INSTALLATION_COMPLETE="Installation komplett!"
 COM_KUNENA_SAMPLEDATA_CATEGORY1_DESC="Wir ermutigen neue Mitglieder, eine kurze Einführung über sich selbst in diese Kategorie zu schreiben. Lernt einander kennen, um gemeinsame Interessen zu teilen."
 COM_KUNENA_SAMPLEDATA_CATEGORY1_HEADER="[b]Willkommen im Kunena Forum![/b] \n\n Sag uns und unseren Mitgliedern, wer du bist, was dir gefällt und warum du Mitglied dieser Webseite wurdest. \n Alle neuen Mitglieder sind herzlich willkommen!"
 COM_KUNENA_SAMPLEDATA_CATEGORY1_TITLE="Willkommen"
-COM_KUNENA_SAMPLEDATA_CATEGORY2_DESC="Habt ihr Bewertungen und Vorschläge mitzuteilen? \n Seid nicht schüchtern und schreibt uns, wir möchten von euch hören und bemühen uns, unsere Website besser und Benutzerfreundlicher für unsere Gäste und Mitglieder zu gestalten."
+COM_KUNENA_SAMPLEDATA_CATEGORY2_DESC="Habt ihr Bewertungen und Vorschläge mitzuteilen? \n Seid nicht schüchtern und schreibt uns, wir möchten von euch lesen und bemühen uns, unsere Website besser und Benutzerfreundlicher für unsere Gäste und Mitglieder zu gestalten."
 COM_KUNENA_SAMPLEDATA_CATEGORY2_HEADER="Dies ist der optionale Forum-Header für die Suggestion Box."
 COM_KUNENA_SAMPLEDATA_CATEGORY2_TITLE="Abstimmungsbox"
 COM_KUNENA_SAMPLEDATA_POST_WELCOME_SUBJECT="Willkommen bei Kunena!"
