--- a/components/com_kunena/admin/language/fa-IR/fa-IR.com_kunena.controllers.ini
+++ b/components/com_kunena/admin/language/fa-IR/fa-IR.com_kunena.controllers.ini
@@ -1,6 +1,6 @@
 ; Kunena Forum translation
 ;
-; All translations can be found from https://www.transifex.net/projects/p/Kunena/r/Kunena2/
+; All translations can be found from https://www.transifex.com/projects/p/Kunena/
 ; Please join the translation team if you want to contribute your changes to the next release.
 ;
 ; License GNU General Public License version 3 or later; see LICENSE.txt
@@ -9,28 +9,27 @@
 ; Using new INI string format for Joomla! 2.5
 
 
-
 ; JROOT/administrator/components/com_kunena/controllers/
 
 COM_KUNENA_NEW_ORDERING_SAVED="مرتب سازي جديد ذخيره شد"
 
 ; JROOT/administrator/components/com_kunena/controllers/attachments.php
 
-; COM_KUNENA_ATTACHMENTS_DELETED_SUCCESSFULLY=""
-; COM_KUNENA_NO_ATTACHMENTS_SELECTED=""
+COM_KUNENA_ATTACHMENTS_DELETED_SUCCESSFULLY="فایل (های) ضمیمه شده حذف شدند"
+COM_KUNENA_NO_ATTACHMENTS_SELECTED="فایلی برای پیوست انتخاب نشده است"
 
 ; JROOT/administrator/components/com_kunena/controllers/categories.php
 
-; COM_KUNENA_A_CATEGORIES_DELETED=""
+COM_KUNENA_A_CATEGORIES_DELETED="%d دسته پاک شدند"
 COM_KUNENA_A_CATEGORIES_SAVED="%d تالار بروز شد"
-; COM_KUNENA_A_CATEGORY_DELETED=""
-; COM_KUNENA_A_CATEGORY_DELETE_FAILED=""
-; COM_KUNENA_A_CATEGORY_NO_ADMIN=""
+COM_KUNENA_A_CATEGORY_DELETED="دسته <em>%s</em> پاک شد."
+COM_KUNENA_A_CATEGORY_DELETE_FAILED="پاک کردن با شکست مواجه شد: %s."
+COM_KUNENA_A_CATEGORY_NO_ADMIN="شما مدیر این دسته نیستید <em>%s</em>!"
 COM_KUNENA_A_CATEGORY_SAVED="تالار <em>%s</em> بروز شد"
 COM_KUNENA_A_CATEGORY_SAVE_FAILED="ذخيره تالار %d باخطا روبرو شد: %s"
-; COM_KUNENA_A_CATEGORY_X_CHECKED_OUT=""
+COM_KUNENA_A_CATEGORY_X_CHECKED_OUT="دسته %s توسط شخص دیگری باز می باشد.تا اتمام تغییرات منتظر بمانید."
 COM_KUNENA_A_NO_CATEGORIES_SELECTED="لطفا قبل از انجام اين عمل از ليست تالار را انتخاب كنيد!"
-; COM_KUNENA_VIEW_CATEGORY_EDIT_MODERATOR_REMOVED=""
+COM_KUNENA_VIEW_CATEGORY_EDIT_MODERATOR_REMOVED="کاربر <em>%s</em> دیگر مدیر این دسته نیست <em>%s</em>"
 
 ; JROOT/administrator/components/com_kunena/controllers/config.php
 
@@ -39,7 +38,7 @@ COM_KUNENA_CONFIG_DEFAULT="پيكربندي به حالت پيش فرض تنظي
 
 ; JROOT/administrator/components/com_kunena/controllers/ranks.php
 
-; COM_KUNENA_A_NO_RANKS_SELECTED=""
+COM_KUNENA_A_NO_RANKS_SELECTED="رتبه بندی انتخاب نشده است"
 COM_KUNENA_A_RANKS_UPLOAD_ERROR_UNABLE="خطا. قادر به آپلود تصوير رتبه بندي نيست."
 COM_KUNENA_A_RANKS_UPLOAD_SUCCESS="آپلود تصوير جديد رتبه بندي تكميل شد."
 COM_KUNENA_RANK_DELETED="رتبه بندي حذف شد."
@@ -49,14 +48,14 @@ COM_KUNENA_RANK_SAVED="رتبه بندي ذخيره شد."
 
 COM_KUNENA_A_EMOTICONS_UPLOAD_ERROR_UNABLE="خطا. قادر به آپلود شكلك نيست."
 COM_KUNENA_A_EMOTICONS_UPLOAD_SUCCESS="آپلود شكلك جديد تكميل شد."
-; COM_KUNENA_A_NO_SMILEYS_SELECTED=""
+COM_KUNENA_A_NO_SMILEYS_SELECTED="شکلک انتخاب نشده."
 COM_KUNENA_SMILEY_DELETED="شكلك حذف شد."
 COM_KUNENA_SMILEY_SAVED="شكلك ذخيره شد."
 
 ; JROOT/administrator/components/com_kunena/controllers/templates.php
 
-; COM_KUNENA_A_CTRL_TEMPLATES_ERROR_UNINSTALL_DEFAULT_TEMPLATE=""
-; COM_KUNENA_A_CTRL_TEMPLATES_ERROR_UNINSTALL_SYSTEM_TEMPLATE=""
+COM_KUNENA_A_CTRL_TEMPLATES_ERROR_UNINSTALL_DEFAULT_TEMPLATE="شما قالب %s رانمی توانید حذف کنید."
+COM_KUNENA_A_CTRL_TEMPLATES_ERROR_UNINSTALL_SYSTEM_TEMPLATE="شما قالب سیستمی %s رانمی توانید حذف کنید."
 COM_KUNENA_A_TEMPLATE_MANAGER_CONFIGURATION_SAVED="پيكربندي قالب ذخيره شد"
 COM_KUNENA_A_TEMPLATE_MANAGER_CONTENT_EMPTY="محتواي خالي."
 COM_KUNENA_A_TEMPLATE_MANAGER_COULD_NOT_CSS_UNWRITABLE="نميتوان فايل css را غيرقابل نوشتن كرد"
@@ -69,6 +68,8 @@ COM_KUNENA_A_TEMPLATE_MANAGER_FILE_SAVED="فايل ذخيره شد"
 COM_KUNENA_A_TEMPLATE_MANAGER_INSTALL_EXTRACT_FAILED="بازكردن قالب با خطا روبرو شد"
 COM_KUNENA_A_TEMPLATE_MANAGER_INSTALL_EXTRACT_MISSING="فايلي براي بازكردن وجود ندارد"
 COM_KUNENA_A_TEMPLATE_MANAGER_INSTALL_EXTRACT_SUCCESS="قالب كيوننا با موفقيت نصب شد"
+COM_KUNENA_A_TEMPLATE_MANAGER_INSTALL_FAILED="قالب %s نصب نمی شود."
+COM_KUNENA_A_TEMPLATE_MANAGER_INSTALL_SUCCESS="قالب %s با موفقیت نصب شد."
 COM_KUNENA_A_TEMPLATE_MANAGER_OPERATION_FAILED="عمليات با خطا"
 COM_KUNENA_A_TEMPLATE_MANAGER_TEMPLATE="قالب"
 COM_KUNENA_A_TEMPLATE_MANAGER_TEMPLATE_MISSING_FILE="فايل template.xml در آرشيو قالب وجود ندارد ، نميتوان قالب را نصب كرد."
@@ -79,60 +80,72 @@ COM_KUNENA_A_TEMPLATE_MANAGER_WRONG_CSS="نوع فايل اشتباه است ، 
 
 ; JROOT/administrator/components/com_kunena/controllers/tools.php
 
-; COM_KUNENA_ADMIN_RECOUNT_CATEGORY=""
-; COM_KUNENA_ADMIN_RECOUNT_TOPICS=""
-; COM_KUNENA_ADMIN_RECOUNT_USER=""
-; COM_KUNENA_ADMIN_RECOUNT_USERTOPICS=""
+COM_KUNENA_ADMIN_RECOUNT_CATEGORY="بازشماری مجموعه ها"
+COM_KUNENA_ADMIN_RECOUNT_TOPICS="بازشماری موضوع ها"
+COM_KUNENA_ADMIN_RECOUNT_USER="بازشماری اطلاعات کاربر"
+COM_KUNENA_ADMIN_RECOUNT_USERTOPICS="بازشماری کاربران در موضوع"
 COM_KUNENA_CHOOSEFORUMTOPRUNE="شما بايد انجمني را براي پاكسازي انتخاب كنيد!"
 COM_KUNENA_FORUMPRUNEDFOR="انجمن پاكسازي شده براي"
 COM_KUNENA_MENU_CREATED="منوي ناوبري كيوننا و لينك اصلي انجمن ايجاد شد."
-; COM_KUNENA_MENU_FIXED_LEGACY=""
-; COM_KUNENA_MENU_FIXED_LEGACY_FAILED=""
-; COM_KUNENA_MENU_RE_PURGED=""
-; COM_KUNENA_MENU_RE_PURGE_FAILED=""
-; COM_KUNENA_MENU_RE_PURGE_FORGOT_STATEMENT=""
+COM_KUNENA_MENU_FIXED_LEGACY="مورد ایراد %d از منو درست شد."
+COM_KUNENA_MENU_FIXED_LEGACY_FAILED="مورد ایراد %s از منو درست نشد."
+COM_KUNENA_MENU_RE_PURGED="%s عنوان پیام '%s' تغییر داده شد."
+COM_KUNENA_MENU_RE_PURGE_FAILED="پیامی با عنوان '%s' پیدا نشد."
+COM_KUNENA_MENU_RE_PURGE_FORGOT_STATEMENT="شما فراموش کردید تا نام پریفکس را برای حذف وارد کنید."
 COM_KUNENA_PRUNEDAYS="روز"
 COM_KUNENA_PRUNEDELETED="حذف شده:"
 COM_KUNENA_PRUNETHREADS="موضوع ها"
-; COM_KUNENA_PRUNETRASHED=""
+COM_KUNENA_PRUNETRASHED="حذف شده"
 COM_KUNENA_RECOUNTFORUMS_DONE="همه آمارهاي تالار بازشماري شدند."
-COM_KUNENA_SYNC_USERS_DO_ADD="پروفايل كاربري اضافه شد:"
-COM_KUNENA_SYNC_USERS_DO_DEL="پروفايل كاربري حذف شد:"
-COM_KUNENA_SYNC_USERS_DO_RENAME="پيام بروز شد:"
+COM_KUNENA_SYNC_USERS_ADD_DONE=" پروفایل های کاربر %s افزوده شده است"
+COM_KUNENA_SYNC_USERS_DELETE_DONE=" پروفایل های کاربر %s پاک شده است"
+COM_KUNENA_SYNC_USERS_RENAME_DONE="%s پیام بروز شد."
+COM_KUNENA_TOOLS_CLEANUP_IP_DONE="%s رکورد از آدرسها پاک شد."
+COM_KUNENA_TOOLS_CLEANUP_IP_FAILED="رکورد آدرس پیدا نشد."
 
 ; JROOT/administrator/components/com_kunena/controllers/topicicons.php
 
-; COM_KUNENA_A_NO_TOPICICONS_SELECTED=""
-; COM_KUNENA_A_NO_TOPICICON_SELECTED=""
-; COM_KUNENA_A_TOPICICON=""
-; COM_KUNENA_A_TOPICICON_ALREADY_DEFAULT=""
-; COM_KUNENA_A_TOPICICON_DEFAULT=""
-; COM_KUNENA_A_TOPICICON_NOTDEFAULT=""
-; COM_KUNENA_A_TOPICICON_PUBLISHED=""
-; COM_KUNENA_A_TOPICICON_UNPUBLISHED=""
-; COM_KUNENA_A_TOPICON_MANAGER_DIR_NOT_EXIST=""
-; COM_KUNENA_A_TOPICON_MANAGER_ERROR_INSTALL_FAILED=""
-; COM_KUNENA_A_TOPICON_MANAGER_INSTALL_EXTRACT_FAILED=""
-; COM_KUNENA_A_TOPICON_MANAGER_INSTALL_EXTRACT_MISSING=""
-; COM_KUNENA_A_TOPICON_MANAGER_INSTALL_EXTRACT_SUCCESS=""
-; COM_KUNENA_A_TOPICON_MANAGER_TEMPLATE_MISSING_FILE=""
-; COM_KUNENA_ORDERING_SAVE_FAILED=""
-; COM_KUNENA_TOPICICONS_DELETED=""
-; COM_KUNENA_TOPICICON_SAVED=""
+COM_KUNENA_A_NO_TOPICICONS_SELECTED="آیکون هایی برای موضوع انتخاب نشده اند"
+COM_KUNENA_A_NO_TOPICICON_SELECTED="هیچ آیکونی برای موضوع انتخاب نشده است"
+COM_KUNENA_A_TOPICICON="وضیعت آیکون موضوع"
+COM_KUNENA_A_TOPICICON_ALREADY_DEFAULT="یک آیکون موضوع هم اکنون به صورت پیشفرض قرار داده شده"
+COM_KUNENA_A_TOPICICON_DEFAULT="آیکون پیش فرض قرار داده شد."
+COM_KUNENA_A_TOPICICON_NOTDEFAULT="آیکونی بغیر از پیش فرض قرار داده شد."
+COM_KUNENA_A_TOPICICON_PUBLISHED="منتشر شده"
+COM_KUNENA_A_TOPICICON_UNPUBLISHED="منتشر نشده"
+COM_KUNENA_A_TOPICON_MANAGER_DIR_NOT_EXIST="نوع ناشناخته فایل آرشیو!"
+COM_KUNENA_A_TOPICON_MANAGER_ERROR_INSTALL_FAILED="خطایی هنگام نصب فایل آرشیو رخ داده!"
+COM_KUNENA_A_TOPICON_MANAGER_INSTALL_EXTRACT_FAILED="خطایی هنگام باز کردن فایل آرشیو رخ داده!"
+COM_KUNENA_A_TOPICON_MANAGER_INSTALL_EXTRACT_MISSING="خطایی هنگام آپلود فایل آرشیو رخ داده!"
+COM_KUNENA_A_TOPICON_MANAGER_INSTALL_EXTRACT_SUCCESS="نصب آیکون جدید موفقیت آمیز بود!"
+COM_KUNENA_A_TOPICON_MANAGER_TEMPLATE_MISSING_FILE="فایل آیکون .xml گمشده!"
+COM_KUNENA_ORDERING_SAVE_FAILED="شکست در تغییر آیکون!"
+COM_KUNENA_TOPICICONS_DELETED="آیکون پاک شد."
+COM_KUNENA_TOPICICON_SAVED="آیکون ذخیره شد."
 
 ; JROOT/administrator/components/com_kunena/controllers/trash.php
 
-; COM_KUNENA_A_NO_MESSAGES_SELECTED=""
-COM_KUNENA_TRASH_DELETE_DONE="پيام با موفقيت حذف شد"
-COM_KUNENA_TRASH_RESTORE_DONE="آيتم هاي در سطل بازيافت بازگردانده شدند"
+COM_KUNENA_A_NO_MESSAGES_SELECTED="پیامی انتخاب نشده!"
+COM_KUNENA_TRASH_DELETE_MESSAGES_DONE="پیام انتخابی درست پاک شده."
+COM_KUNENA_TRASH_DELETE_TOPICS_DONE="موضوعات انتخاب شده با موفقیت حذف شده."
+COM_KUNENA_TRASH_ITEMS_RESTORE_DONE="%s مورد از سطل بازيافت برگت داده شد."
 
 ; JROOT/administrator/components/com_kunena/controllers/users.php
 
-; COM_KUNENA_A_USERMES_MOVED_DONE=""
+COM_KUNENA_A_USERMES_MOVED_DONE="پیام کاربر جابجا شد."
 COM_KUNENA_A_USERMES_TRASHED_DONE="پيام كاربر با موفقيت به سطل بازيافت منتقل شد"
-; COM_KUNENA_A_USER_DELETE_DONE=""
-; COM_KUNENA_A_USER_LOGOUT_DONE=""
+COM_KUNENA_A_USER_LOGOUT_DONE="کاربر مجبور به خروج از سیستم."
 COM_KUNENA_PROFILE_NO_USER="كاربر وجود ندارد."
-; COM_KUNENA_USER_PROFILE_SAVED_SUCCESSFULLY=""
+COM_KUNENA_USER_PROFILE_SAVED_SUCCESSFULLY="پروفایل کاربر با موفقیت ذخیره شد."
+COM_KUNENA_USER_PROFILE_SAVED_FAILED="ذخیره پروفایل کاربر با شکست مواجه شد."
 COM_KUNENA_USER_UNBAN_DONE="كاربر با موفقيت آزاد سازي شد"
-; COM_KUNENA_USER_UNBLOCK_DONE=""
+COM_KUNENA_USER_UNBLOCK_DONE="کاربر فعال شد."
+COM_KUNENA_USER_ERROR_CANNOT_DELETE_YOURSELF="خودتان را نمی توانید حذف کنید."
+COM_KUNENA_USER_ERROR_CANNOT_DELETE_ADMINS="نمی توانید کاربری از گروه مدیران حذف کنید."
+COM_KUNENA_USER_DELETE_DONE_SUCCESSFULLY="نام کاربری %s با موفقیت پاک شد."
+COM_KUNENA_USERS_BATCH_NO_USERS_SELECTED="کاربری انتخاب نشده."
+COM_KUNENA_USERS_BATCH_NO_CATEGORIES_SELECTED="دسته ای انتخاب نشده."
+COM_KUNENA_USERS_SET_MODERATORS_DONE="کاربر بعنوان مدیر انتخاب شد."
+COM_KUNENA_USER_BANNED_DONE="ممنوعیت کاربر با موفقیت انجام شد."
+COM_KUNENA_USER_DELETE_KUNENA_USER_TABLE_FAILED="کاربر %s را نمی نوان از جدول کاربران انجمن پاک کرد."
+COM_KUNENA_USER_DELETE_JOOMLA_USER_TABLE_FAILED="کاربر %s را نمی نوان از جدول کاربران جوملا پاک کرد."
