--- a/components/com_kunena/admin/language/ro-RO/ro-RO.com_kunena.ini
+++ b/components/com_kunena/admin/language/ro-RO/ro-RO.com_kunena.ini
@@ -1,4 +1,29 @@
-; Sorry, this language file hasn't been translated yet.
+; Kunena Forum translation
 ;
-; If you want to help us, please start by reading our documentation on translating Kunena:
-; http://docs.kunena.org/index.php/Translating_Kunena
+; All translations can be found from https://www.transifex.com/projects/p/Kunena/
+; Please join the translation team if you want to contribute your changes to the next release.
+;
+; License GNU General Public License version 3 or later; see LICENSE.txt
+; Note : All ini files need to be saved as UTF-8 - No BOM
+
+; Using new INI string format for Joomla! 2.5
+
+
+; JROOT/administrator/components/com_kunena/
+
+COM_KUNENA_ALLREGISTERED="Toți cei Înregistrați"
+COM_KUNENA_A_NO="No"
+COM_KUNENA_A_TEMPLATE_MANAGER_UNINSTALL="Dezinstalează"
+COM_KUNENA_A_YES="Da"
+COM_KUNENA_DELETE_PERMANENTLY="Șterge"
+COM_KUNENA_NOBODY="Nimeni"
+COM_KUNENA_PUBLIC="Public"
+COM_KUNENA_TOPLEVEL="Nivel Maxim"
+COM_KUNENA_TRASH_MESSAGES="Mesaje"
+COM_KUNENA_TRASH_TOPICS="Subiecte"
+COM_KUNENA_TRASH_USERMESSAGES="Șterge Mesajele"
+COM_KUNENA_UNPUBLISHED="Nepublicat"
+
+; Removed strings
+
+COM_KUNENA_VIEW_PMS="Apas&#259; aici pentru a trimite un mesaj privat acestui utilizator."
