--- a/components/com_kunena/site/language/es-ES/es-ES.com_kunena.ini
+++ b/components/com_kunena/site/language/es-ES/es-ES.com_kunena.ini
@@ -123,7 +123,7 @@ COM_KUNENA_USRL_POSTS="Mensajes"
 COM_KUNENA_VIEW_CATEGORY_LIST_CATEGORY_TITLE="Ver Categoría '%s'"
 COM_KUNENA_YES="Si"
 COM_KUNENA_AVATAR_UPLOAD_NOT_VALID_EXTENSIONS="Las extensiones permitidas para cargar el avatar son: %s"
-; COM_KUNENA_STATS_NOT_ALLOWED_TOSEE_STATS="You aren't allowed to see statistics"
+COM_KUNENA_STATS_NOT_ALLOWED_TOSEE_STATS="No se le permite ver las estadísticas"
 
 ; Automatically generated strings for COM_KUNENA_BUTTON_*
 
