--- a/components/com_kunena/site/language/fa-IR/fa-IR.com_kunena.views.ini
+++ b/components/com_kunena/site/language/fa-IR/fa-IR.com_kunena.views.ini
@@ -12,7 +12,7 @@
 ; JROOT/components/com_kunena/views/
 
 COM_KUNENA_KARMA="امتياز"
-COM_KUNENA_KARMA_APPLAUD="Applaud"
+COM_KUNENA_KARMA_APPLAUD="تحسین"
 COM_KUNENA_KARMA_SMITE="شكست"
 COM_KUNENA_RSS_DISABLED="اشتراك RSS غيرفعال است"
 
@@ -61,18 +61,18 @@ COM_KUNENA_WHO_ONLINE_NOW="آنلاين"
 ; JROOT/components/com_kunena/views/credits/view.html.php
 
 COM_KUNENA_CREDITS_PAGE_TITLE="تيم همكاران"
-; COM_KUNENA_CREDITS_INTRO="Kunena® Forum is an open source project that requires the dedication and investment of personal time from various contributors. This version has been made possible by the following <a target="_QQ_"_blank"_QQ_" href="_QQ_"%s"_QQ_">contributors</a> :"
-; COM_KUNENA_CREDITS_CONTRIBUTION="Contribution"
-; COM_KUNENA_CREDITS_DEVELOPEMENT="Developement"
-; COM_KUNENA_CREDITS_DOCUMENTATION="Documentation"
-; COM_KUNENA_CREDITS_DESIGN="Design"
-; COM_KUNENA_CREDITS_LANGUAGES="Languages"
-; COM_KUNENA_CREDITS_MODERATION="Forum Moderation"
+COM_KUNENA_CREDITS_INTRO="افزونه کوننا از قوانین اپن سورس(کدباز) پیروی میکند <a target="_QQ_"_blank"_QQ_" href="_QQ_"%s"_QQ_"></a> :"
+COM_KUNENA_CREDITS_CONTRIBUTION="همکاری"
+COM_KUNENA_CREDITS_DEVELOPEMENT="گسترش"
+COM_KUNENA_CREDITS_DOCUMENTATION="مکتوب کردن"
+COM_KUNENA_CREDITS_DESIGN="طراحی"
+COM_KUNENA_CREDITS_LANGUAGES="زبان"
+COM_KUNENA_CREDITS_MODERATION="مدیر تالار"
 COM_KUNENA_CREDITS_SECURITY="امنيت"
-; COM_KUNENA_CREDITS_TESTING="Testing"
-; COM_KUNENA_CREDITS_FOUNDER="Founder"
-; COM_KUNENA_CREDITS_X_AND_Y="%s and %s"
-; COM_KUNENA_CREDITS_THANKS="The Kunena Team would like to thank the <a target="_QQ_"_blank"_QQ_" href="_QQ_"%s"_QQ_">community</a> for its help and support. We also appreciate the hard work of everyone who have <a target="_QQ_"_blank"_QQ_" href="_QQ_"%s"_QQ_">translated</a> Kunena into many other languages. In addition we would like to thank many members of <a target="_QQ_"_blank"_QQ_" href="_QQ_"%s"_QQ_">www.kunena.org</a>, past and present, who have <a target="_QQ_"_blank"_QQ_" href="_QQ_"%s"_QQ_">contributed</a> and helped make this a more stable and bugfree version."
+COM_KUNENA_CREDITS_TESTING="انجام تست"
+COM_KUNENA_CREDITS_FOUNDER="موسس"
+COM_KUNENA_CREDITS_X_AND_Y="%s و %s"
+COM_KUNENA_CREDITS_THANKS="تیم کوننااز کسانی که در پیشبرد افزونه کوننا تلاش کردند، تشکر و قدردانی می کند."
 COM_KUNENA_CREDITS_GO_BACK="براي برگشت به انجمن"
 COM_KUNENA_VIEW_CREDITS_DEFAULT="امتیاز گروه کیوننا"
 
