--- a/components/com_kunena/site/language/pl-PL/pl-PL.com_kunena.ini
+++ b/components/com_kunena/site/language/pl-PL/pl-PL.com_kunena.ini
@@ -123,7 +123,7 @@ COM_KUNENA_USRL_POSTS="Posty"
 COM_KUNENA_VIEW_CATEGORY_LIST_CATEGORY_TITLE="Pokaż kategorię '%s'"
 COM_KUNENA_YES="Tak"
 COM_KUNENA_AVATAR_UPLOAD_NOT_VALID_EXTENSIONS="Dodatki pozwalające załadować avatar to: %s"
-; COM_KUNENA_STATS_NOT_ALLOWED_TOSEE_STATS="You aren't allowed to see statistics"
+COM_KUNENA_STATS_NOT_ALLOWED_TOSEE_STATS="Nie jesteś uprawniony aby oglądać statystyki."
 
 ; Automatically generated strings for COM_KUNENA_BUTTON_*
 
