--- a/components/com_kunena/site/language/pl-PL/pl-PL.com_kunena.tpl_blue_eagle.ini
+++ b/components/com_kunena/site/language/pl-PL/pl-PL.com_kunena.tpl_blue_eagle.ini
@@ -110,7 +110,7 @@ COM_KUNENA_USRL_REGISTERED_USERS="%s jest %d zarejestrowanych użytkowników"
 
 ; JROOT/components/com_kunena/template/blue_eagle/template.xml
 
-; COM_KUNENA_TEMPLATE_BLUE_EAGLE3_DESC="Blue Eagle is the default template for Kunena."
+COM_KUNENA_TEMPLATE_BLUE_EAGLE3_DESC="Szablon Blue Eagle jest domyślnym szablonem Kunena."
 COM_KUNENA_TEMPLATE_DISPLAY_MENU="Wyświetl menu forum Kunena"
 COM_KUNENA_TEMPLATE_DISPLAY_MENU_DESC="Wyświetl aktywne menu forum Kunena w szablonie Kunena. Wyłącz tę funkcję, jeśli chcesz korzystać z własnego menu."
 COM_KUNENA_TEMPLATE_FORUM_HEADER_BACKGROUND="Tło nagłówka forum"
@@ -121,7 +121,7 @@ COM_KUNENA_TEMPLATE_SKINNER="Wtop się w szablon Joomla"
 COM_KUNENA_TEMPLATE_SKINNER_DESC="Dzięki użytym przeźroczystościom, ta opcja pozwala na automatyczne wymieszanie stylu Kunena w szablon Joomla."
 COM_KUNENA_TEMPLATE_TOGGLER_COLOR="Kolor przełacznika"
 COM_KUNENA_TEMPLATE_TOGGLER_COLOR_DESC="Podaj kolor przycisku przełącznika sekcji"
-; COM_KUNENA_TEMPLATE_LOAD_RESPONSIVE_CSS="Load Responsive CSS"
+COM_KUNENA_TEMPLATE_LOAD_RESPONSIVE_CSS="Załaduj responsywny CSS"
 ; COM_KUNENA_TEMPLATE_LOAD_RESPONSIVE_CSS_DESC="Load responsive CSS to make the template to fit into mobile devices. This feature needs a responsive Joomla template to work correctly."
 
 ; Removed strings
