--- a/components/com_kunena/site/language/th-TH/th-TH.com_kunena.views.ini
+++ b/components/com_kunena/site/language/th-TH/th-TH.com_kunena.views.ini
@@ -22,20 +22,20 @@ COM_KUNENA_THREADS_IN_FORUM="หัวข้อในหมวดหมู่น
 
 ; JROOT/components/com_kunena/views/category/view.html.php
 
-; COM_KUNENA_ALLOW_ANONYMOUS="Allow Anonymous"
+COM_KUNENA_ALLOW_ANONYMOUS="อนุญาตให้ผู้ไม่ประสงค์ออก"
 COM_KUNENA_ALLOW_POLLS="เปิดให้สร้างโพลสำรวจในหมวดนี้"
 COM_KUNENA_CATEGORIES="หมวด"
 COM_KUNENA_CATEGORY_EDIT="แก้ไขหมวดหมู่: <em>%s</em>"
 COM_KUNENA_CATEGORY_NEW="สร้างหมวดหมู่ใหม่"
-; COM_KUNENA_DISABLE_REVIEW="Disable Post Review"
-; COM_KUNENA_DISALLOW_ANONYMOUS="Disallow Anonymous"
+COM_KUNENA_DISABLE_REVIEW="ปิดการใช้งานโพสต์ความคิดเห็น"
+COM_KUNENA_DISALLOW_ANONYMOUS="ไม่อนุญาตให้ผู้ไม่ประสงค์ออก"
 COM_KUNENA_DISALLOW_POLLS="ไม่อนุญาตให้ใช้งานแบบสำรวจได้"
-; COM_KUNENA_ENABLE_REVIEW="Enable Post Review"
+COM_KUNENA_ENABLE_REVIEW="เปิดใช้งานการโพสต์ความคิดเห็น"
 COM_KUNENA_GEN_FORUM_NEWPOST="มีโพสต์ที่ยังไม่ได้อ่าน"
 COM_KUNENA_GEN_FORUM_NOTNEW="ไม่มีการโพสต์ใหม่"
 COM_KUNENA_LOCK="ล็อคกระทู้"
 COM_KUNENA_PUBLISH="นำเสนอ"
-; COM_KUNENA_SELECT_BATCH_OPTION="- Select batch action -"
+COM_KUNENA_SELECT_BATCH_OPTION="- เลือกการกระทำ -"
 COM_KUNENA_UNLOCK="ยกเลิกการล็อคกระทู้"
 COM_KUNENA_UNPUBLISH="ยกเลิกการเผยแพร่"
 COM_KUNENA_VIEW_CATEGORIES_DEFAULT="หมวดหมู่หลัก"
@@ -61,18 +61,18 @@ COM_KUNENA_WHO_ONLINE_NOW="ออนไลน์"
 ; JROOT/components/com_kunena/views/credits/view.html.php
 
 COM_KUNENA_CREDITS_PAGE_TITLE="กิตติกรรมประกาศ"
-; COM_KUNENA_CREDITS_INTRO="Kunena® Forum is an open source project that requires the dedication and investment of personal time from various contributors. This version has been made possible by the following <a target="_QQ_"_blank"_QQ_" href="_QQ_"%s"_QQ_">contributors</a> :"
-; COM_KUNENA_CREDITS_CONTRIBUTION="Contribution"
-; COM_KUNENA_CREDITS_DEVELOPEMENT="Developement"
-; COM_KUNENA_CREDITS_DOCUMENTATION="Documentation"
-; COM_KUNENA_CREDITS_DESIGN="Design"
-; COM_KUNENA_CREDITS_LANGUAGES="Languages"
-; COM_KUNENA_CREDITS_MODERATION="Forum Moderation"
+COM_KUNENA_CREDITS_INTRO="Kunena ®ฟอรั่มเป็นโครงการที่มาเปิดที่ต้องทุ่มเทและการลงทุนของเวลาส่วนตัวจากผู้ร่วมต่างๆ รุ่นนี้ได้รับการทำไปได้โดยต่อไปนี้ <a target="_QQ_"_blank"_QQ_" href="_QQ_"%s"_QQ_"> ผู้ร่วมงาน </ a>:"
+COM_KUNENA_CREDITS_CONTRIBUTION="การสนับสนุน"
+COM_KUNENA_CREDITS_DEVELOPEMENT="พัฒนาการ"
+COM_KUNENA_CREDITS_DOCUMENTATION="หนังสืออ้างอิง"
+COM_KUNENA_CREDITS_DESIGN="ออกแบบ"
+COM_KUNENA_CREDITS_LANGUAGES="ภาษา"
+COM_KUNENA_CREDITS_MODERATION="ผู้ดูแลฟอรั่ม"
 COM_KUNENA_CREDITS_SECURITY="ความปลอดภัย"
-; COM_KUNENA_CREDITS_TESTING="Testing"
-; COM_KUNENA_CREDITS_FOUNDER="Founder"
-; COM_KUNENA_CREDITS_X_AND_Y="%s and %s"
-; COM_KUNENA_CREDITS_THANKS="The Kunena Team would like to thank the <a target="_QQ_"_blank"_QQ_" href="_QQ_"%s"_QQ_">community</a> for its help and support. We also appreciate the hard work of everyone who have <a target="_QQ_"_blank"_QQ_" href="_QQ_"%s"_QQ_">translated</a> Kunena into many other languages. In addition we would like to thank many members of <a target="_QQ_"_blank"_QQ_" href="_QQ_"%s"_QQ_">www.kunena.org</a>, past and present, who have <a target="_QQ_"_blank"_QQ_" href="_QQ_"%s"_QQ_">contributed</a> and helped make this a more stable and bugfree version."
+COM_KUNENA_CREDITS_TESTING="ทดสอบ"
+COM_KUNENA_CREDITS_FOUNDER="ผู้สร้าง"
+COM_KUNENA_CREDITS_X_AND_Y="%s และ %s"
+COM_KUNENA_CREDITS_THANKS="Kunena ทีมอยากจะขอขอบคุณ<a target="_QQ_"_blank"_QQ_" href="_QQ_"%s"_QQ_">ชุมชน </ a> ที่สนับสนุนและช่วยเหลือ นอกจากนี้เรายังชื่นชมการทำงานหนักของทุกคนที่ได้ <a target="_QQ_"_blank"_QQ_" href="_QQ_"%s"_QQ_"> แปล </ a> Kunena เป็นภาษาอื่น ๆ อีกมากมาย นอกจากนี้เราอยากจะขอขอบคุณสมาชิกหลายคนของ <a target="_QQ_"_blank"_QQ_" href="_QQ_"%s"_QQ_"> www.kunena.org </ a> ในอดีตและปัจจุบันที่มี <a target="_QQ_"_blank"_QQ_" href="_QQ_"%s"_QQ_"> สนับสนุน </ a> และช่วยทำให้เรื่องนี้เป็นรุ่นที่มีเสถียรภาพมากขึ้น"
 COM_KUNENA_CREDITS_GO_BACK="ย้อนกลับไปยังฟอรัม"
 COM_KUNENA_VIEW_CREDITS_DEFAULT="เครดิตทีมงาน Kunena"
 
@@ -124,7 +124,7 @@ COM_KUNENA_REPLY_USER_REPLY_DISABLED="คุณไม่สามารถตอ
 COM_KUNENA_SELECT_CATEGORY="- เลือกหมวดหมู่ -"
 COM_KUNENA_VIEW_DISABLED="สมาชิกเท่านั้นที่มีสิทธิในการตั้งและตอบกระทู้"
 COM_KUNENA_VIEW_TOPICS_DEFAULT="หัวข้อ: %s"
-; COM_KUNENA_VIEW_TOPIC_ERROR_LOOP="Internal Error: Loop detected in moved topics!"
+COM_KUNENA_VIEW_TOPIC_ERROR_LOOP="ข้อผิดพลาดภายใน: การตรวจพบในหัวข้อที่ย้าย!"
 
 ; JROOT/components/com_kunena/views/topics/
 
@@ -141,7 +141,7 @@ COM_KUNENA_VIEW_TOPICS_DEFAULT_MODE_TOPICS="กระทู้ล่าสุด
 COM_KUNENA_VIEW_TOPICS_DEFAULT_MODE_UNAPPROVED="หัวข้อที่ยังไม่ได้รับการอนุมัติ"
 COM_KUNENA_VIEW_TOPICS_POSTS_MODE_DEFAULT="ข้อความโพสต์เมื่อเร็วๆนี้"
 COM_KUNENA_VIEW_TOPICS_POSTS_MODE_DELETED="โพสต์ที่ถูกลบ"
-; COM_KUNENA_VIEW_TOPICS_POSTS_MODE_MYTHANKS="Given Thank You"
+COM_KUNENA_VIEW_TOPICS_POSTS_MODE_MYTHANKS="ให้คำขอบคุณ"
 COM_KUNENA_VIEW_TOPICS_POSTS_MODE_THANKYOU="ได้รับพลังน้ำใจจาก"
 COM_KUNENA_VIEW_TOPICS_POSTS_MODE_UNAPPROVED="โพสต์ที่ยังไม่ได้ตรวจสอบ"
 COM_KUNENA_VIEW_TOPICS_USERS_MODE_DEFAULT="ตอบกลับโดยฉัน"
