Report modal back button brings to unexpected place

--- a/components/com_kunena/site/language/en-GB/en-GB.com_kunena.templates.ini
+++ b/components/com_kunena/site/language/en-GB/en-GB.com_kunena.templates.ini
@@ -234,6 +234,7 @@ COM_KUNENA_REASON="Reason"
 COM_KUNENA_REPORT_MESSAGE="Your Message"
 COM_KUNENA_REPORT_REASON="Reason"
 COM_KUNENA_REPORT_SEND="Send Report"
+COM_KUNENA_REPORT_CLOSEMODAL_LABEL="Close"
 COM_KUNENA_REPORT_TO_MODERATOR="Report This Message To Moderators"
 COM_KUNENA_SAVE="Save"
 COM_KUNENA_SEARCH_EXACT="Exact Name"
