--- a/components/com_kunena/site/language/en-GB/en-GB.com_kunena.views.ini
+++ b/components/com_kunena/site/language/en-GB/en-GB.com_kunena.views.ini
@@ -163,3 +163,4 @@ COM_KUNENA_USER_SHOWONLINE="Show Online"
 COM_KUNENA_VIEW_USER_DEFAULT="Profile for %s"
 COM_KUNENA_VIEW_USER_EDIT_AUTH_FAILED="You are not allowed to edit user %s."
 COM_KUNENA_VIEW_USER_LIST="User List"
+COM_KUNENA_LOGIN_SECRETKEY="Secret Key"
