--- a/components/com_kunena/site/language/en-GB/en-GB.com_kunena.controllers.ini
+++ b/components/com_kunena/site/language/en-GB/en-GB.com_kunena.controllers.ini
@@ -38,6 +38,7 @@ COM_KUNENA_POST_NO_UNSUBSCRIBED_TOPIC="This topic has <strong>NOT</strong> been 
 COM_KUNENA_POST_SUCCESS_DELETE="The message has been successfully deleted."
 COM_KUNENA_POST_SUCCESS_MOVE="The Topic has been successfully moved."
 COM_KUNENA_POST_SUCCESS_UNDELETE="The message has been successfully restored."
+COM_KUNENA_CONTROLLER_TOPIC_ERROR_MESSAGE_RESIZE_IMAGES_TOO_INSUFFICIENT_PHP_MEMORY="The php memory limit on your system is insufficient to resize these images, the images hasn't been uploaded."
 
 ; JROOT/components/com_kunena/controllers/topic.php
 
